--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -1,32 +1,36 @@
 .fieldset
 = simple_form_for(@project, :validation => true, :html => {:class => 'form-horizontal'}) do |f|
-  = f.error_notification
+  - if @project.errors.any?
+    .alert.alert-danger
+      %h4
+        = pluralize(@project.errors.count, 'error')
+        prohibited saving:
+      %ul
+        - @project.errors.full_messages.each do |msg|
+          %li= msg
 
   .form-inputs
     .row.mb-3
-      = f.label :matchcode, class: 'col-sm-3 col-form-label'
-      .col-sm-9
+      = f.label :matchcode, class: 'col-lg-2 col-md-3 col-form-label'
+      .col-lg-3
         = f.text_field :matchcode, :class => 'form-control'
+      .col-lg-6
+        .form-check
+          = f.input_field :active, as: :boolean, class: 'form-check-input'
+          = f.label :active, class: 'form-check-label'
+
     .row.mb-3
-      = f.label :description, class: 'col-sm-3 col-form-label'
-      .col-sm-9
+      = f.label :description, class: 'col-lg-2 col-md-3 col-form-label'
+      .col-lg-9
         = f.text_area :description, :class => 'form-control', :rows => 3
     .row.mb-3
-      = f.label :time_budget, class: 'col-sm-3 col-form-label'
-      .col-sm-9
+      = f.label :time_budget, class: 'col-lg-2 col-md-3 col-form-label'
+      .col-lg-5.col-md-4
         = f.text_field :time_budget, :class => 'form-control'
     .row.mb-3
-      = f.label :bill_to_customer_id, class: 'col-sm-3 col-form-label'
-      .col-sm-9
+      = f.label :bill_to_customer_id, class: 'col-lg-2 col-md-3 col-form-label'
+      .col-lg-5.col-md-4
         = f.collection_select :bill_to_customer_id, Customer.all, :id, :name, { prompt: 'Select customer...' }, {:class => 'form-select'}
-    .row.mb-3
-      = f.label :active, class: 'col-sm-3 col-form-label'
-      .col-sm-9
-        .form-check
-          = f.check_box :active, :class => 'form-check-input'
-          = f.label :active, 'Active', class: 'form-check-label'
-
-  %br
 
   = action_buttons_wrapper do
     = f.button :submit, :class => 'btn btn-primary'
