--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,23 +1,19 @@
 = page_header_with_new_button('Listing projects', new_project_path)
 
 .mb-3
-  .project-filter
-    %nav{"aria-label" => "Project status filter"}
-      %ul.pagination.pagination-sm.justify-content-start
-        %li.page-item{class: (params[:active].blank? ? 'active' : '')}
-          = link_to 'All', projects_path, class: 'page-link'
-        %li.page-item{class: (params[:active] == 'true' ? 'active' : '')}
-          = link_to 'Active', projects_path(active: true), class: 'page-link'
-        %li.page-item{class: (params[:active] == 'false' ? 'active' : '')}
-          = link_to 'Inactive', projects_path(active: false), class: 'page-link'
+  .btn-toolbar.mb-3{:role=>"toolbar", "aria-label"=>"List toolbar"}
+    .btn-group.btn-group-sm.me-2.status-filter{:role=>"group", "aria-label"=>"Project status filter"}
+      = link_to 'All', projects_path(filter: 'all'), class: (params[:filter] == 'all' ? 'btn btn-outline-primary active' : 'btn btn-outline-primary')
+      = link_to 'Active', projects_path(filter: 'active'), class: (params[:filter] == 'active' ? 'btn btn-outline-primary active' : 'btn btn-outline-primary')
+      = link_to 'Inactive', projects_path(filter: 'inactive'), class: (params[:filter] == 'inactive' ? 'btn btn-outline-primary active' : 'btn btn-outline-primary')
 
 %table.table.table-striped.table-sm
   %tr
-    %th Matchcode
-    %th Description
+    %th{:width => "10%"} Matchcode
+    %th{:width => "30%"} Name
+    %th{:width => "7%"} Status
     %th Time budget
     %th Bill to customer
-    %th Status
     %th{:width => "3%"}
     %th{:width => "3%"}
     %th{:width => "3%"}
@@ -26,13 +22,13 @@
     %tr
       %td= project.matchcode
       %td= project.description
-      %td= project.time_budget
-      %td= project.bill_to_customer.try(:matchcode)
       %td
         - if project.active?
           %span.badge.bg-success Active
         - else
           %span.badge.bg-secondary Inactive
+      %td= project.time_budget
+      %td= project.bill_to_customer.try(:matchcode)
       %td= list_action_link('Show', project, :show)
       %td= list_action_link('Edit', edit_project_path(project), :edit)
       %td
@@ -40,4 +36,3 @@
           = destroy_link(project, "Are you sure you want to delete project \"#{project.matchcode}\"?")
         - else
           %span.text-muted.small Used
-
