--- a/app/views/sales_tax_rates/show.html.haml
+++ b/app/views/sales_tax_rates/show.html.haml
@@ -8,6 +8,6 @@
   %b Rate:
   = @sales_tax_rate.rate
 
-= link_to 'Edit', edit_sales_tax_rate_path(@sales_tax_rate)
-\|
-= link_to 'Back', sales_tax_rates_path
+= action_buttons_wrapper do
+  = action_button 'Edit', edit_sales_tax_rate_path(@sales_tax_rate), :primary
+  = action_button 'Back', sales_tax_rate_path, :secondary
