--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -28,9 +28,9 @@
       .col-lg-5.col-md-4
         = f.text_field :time_budget, :class => 'form-control'
     .row.mb-3
-      = f.label :bill_to_customer_id, class: 'col-lg-2 col-md-3 col-form-label'
+      = f.label :bill_to_customer_id, 'Bill to customer (optional)', class: 'col-lg-2 col-md-3 col-form-label'
       .col-lg-5.col-md-4
-        = f.collection_select :bill_to_customer_id, Customer.order(:name), :id, :name, { prompt: 'Select customer...' }, {:class => 'form-select'}
+        = f.collection_select :bill_to_customer_id, Customer.order(:name), :id, :name, { prompt: 'Select customer...', include_blank: 'No customer (reusable project)' }, {:class => 'form-select'}
 
   = action_buttons_wrapper do
     = f.button :submit, :class => 'btn btn-primary'
