Remove pointless "Used" text on list pages

--- a/app/views/customers/index.html.haml
+++ b/app/views/customers/index.html.haml
@@ -28,7 +28,5 @@
       %td= list_action_link('Show', customer, :show)
       %td= list_action_link('Edit', edit_customer_path(customer), :edit)
       %td
-        - if customer.used_in_invoices?
-          %span.text-muted.small{title: "Cannot delete - customer used in invoices"} Used
-        - else
+        - if !customer.used_in_invoices?
           = destroy_link(customer, "Are you sure you want to delete customer \"#{customer.matchcode}\" (#{customer.name})?")
