--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,7 +4,7 @@
   .col-md-8
     .card
       .card-header
-        %h5 Business Statistics
+        Business Statistics
       .card-body
         .row.mb-3
           .col-md-6
@@ -33,7 +33,7 @@
   .col-md-4
     .card
       .card-header
-        %h5 Company Information
+        Company Information
       .card-body
         - if @data[:issuer_company].png_logo.present?
           .mb-3.text-center
