--- a/app/views/issuer_companies/edit.html.haml
+++ b/app/views/issuer_companies/edit.html.haml
@@ -14,7 +14,7 @@
     .col-md-6
       .card
         .card-header
-          %h5 Company Information
+          Company Information
         .card-body
           .mb-3
             = form.label :short_name, 'Short Name', class: 'form-label'
@@ -39,7 +39,7 @@
     .col-md-6
       .card
         .card-header
-          %h5 Banking Information
+          Banking Information
         .card-body
           .mb-3
             = form.label :bankaccount_bank, 'Bank', class: 'form-label'
@@ -57,7 +57,7 @@
     .col-md-6
       .card
         .card-header
-          %h5 Document Settings
+          Document Settings
         .card-body
           .mb-3
             = form.label :document_contact_line1, 'Contact Line 1', class: 'form-label'
@@ -110,7 +110,7 @@
     .col-md-6
       .card
         .card-header
-          %h5 Invoice Footer
+          Invoice Footer
         .card-body
           .mb-3
             = form.label :invoice_footer, 'Invoice Footer', class: 'form-label'
