--- a/app/views/issuer_companies/show.html.haml
+++ b/app/views/issuer_companies/show.html.haml
@@ -4,7 +4,7 @@
   .col-md-6
     .card
       .card-header
-        %h5 Company Information
+        Company Information
       .card-body
         .row.mb-2
           .col-sm-4
@@ -48,7 +48,7 @@
   .col-md-6
     .card
       .card-header
-        %h5 Banking Information
+        Banking Information
       .card-body
         .row.mb-2
           .col-sm-4
@@ -72,7 +72,7 @@
   .col-md-6
     .card
       .card-header
-        %h5 Document Settings
+        Document Settings
       .card-body
         .row.mb-2
           .col-sm-4
@@ -131,7 +131,7 @@
   .col-md-6
     .card
       .card-header
-        %h5 Invoice Footer
+        Invoice Footer
       .card-body
         - if @issuer_company.invoice_footer.present?
           = simple_format(@issuer_company.invoice_footer)
