--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -7,14 +7,11 @@
     %th Product Class
     %th{width: "3%"}
     %th{width: "3%"}
-    %th{width: "3%"}
 
   - @products.each do |product|
     %tr
-      %td= product.title
+      %td= link_to (product.title || "\##{product.id}"), product
       %td= format_currency(product.rate)
       %td= product.sales_tax_product_class && product.sales_tax_product_class.name
-      %td= list_action_link('Show', product, :show)
       %td= list_action_link('Edit', edit_product_path(product), :edit)
       %td= destroy_link(product, "Are you sure you want to delete product \"#{product.title}\"?")
-
