--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -4,7 +4,7 @@
   .col-md-8
     .card
       .card-header
-        %h5 Project Information
+        Project Information
       .card-body
         .row.mb-2
           .col-sm-3
