--- a/app/views/customers/show.html.haml
+++ b/app/views/customers/show.html.haml
@@ -4,7 +4,7 @@
   .col-md-6
     .card
       .card-header
-        %h5 Basic Information
+        Basic Information
       .card-body
         .row.mb-2
           .col-sm-4
@@ -48,7 +48,7 @@
   .col-md-6
     .card
       .card-header
-        %h5 Contact & Terms
+        Contact & Terms
       .card-body
         .row.mb-2
           .col-sm-4
@@ -69,7 +69,7 @@
     .col-md-12
       .card
         .card-header
-          %h5 Automated Email Settings
+          Automated Email Settings
         .card-body
           .row.mb-2
             .col-sm-3
@@ -94,7 +94,7 @@
     .col-md-12
       .card
         .card-header
-          %h5 Notes
+          Notes
         .card-body
           = simple_format(@customer.notes)
 
