--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -4,7 +4,7 @@
   .col-md-8
     .card
       .card-header
-        %h5 Product Information
+        Product Information
       .card-body
         .row.mb-2
           .col-sm-3
