--- a/app/views/invoices/show.html.haml
+++ b/app/views/invoices/show.html.haml
@@ -58,7 +58,7 @@
             .col-sm-8
               - if @invoice.email_sent_at
                 %span.badge.bg-success Sent #{format_datetime(@invoice.email_sent_at)}
-              - elsif @invoice.customer.customer_contacts.receiving_invoices.any? || @invoice.customer.invoice_email_auto_enabled
+              - elsif @invoice.customer.email.present? || @invoice.customer.invoice_email_auto_enabled
                 %span.badge.bg-warning Unsent
               - else
                 %span.badge.bg-secondary No Email Address
@@ -142,7 +142,7 @@
       = action_button 'Edit', edit_invoice_path(@invoice), :primary
     - if @invoice.attachment
       = action_button 'PDF', @invoice.attachment, :success, { target: '_blank', data: { turbo: false } }
-      - if @invoice.customer&.has_invoice_email?
+      - if @invoice.customer&.email.present? || (@invoice.customer&.invoice_email_auto_enabled && @invoice.customer&.invoice_email_auto_to.present?)
         %button.btn.btn-warning{"data-action" => "click->email-preview#open"}
           Send E-Mail
     - else
