--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -79,11 +79,11 @@ body { padding-top: 60px; }
   display: inline;
 }
 
-.invoice-details .row {
+.document-details .row {
   border-bottom: 1px solid var(--bs-border-color-translucent);
 }
 
-.invoice-lines table th {
+.document-lines table th {
   background-color: var(--bs-secondary-bg) !important;
   color: var(--bs-secondary-color) !important;
   border-color: var(--bs-border-color);
@@ -91,7 +91,7 @@ body { padding-top: 60px; }
   padding: 0.75rem 0.5rem;
 }
 
-.invoice-lines table td {
+.document-lines table td {
   padding: 0.5rem;
   vertical-align: top;
   background-color: var(--bs-body-bg);
@@ -99,11 +99,11 @@ body { padding-top: 60px; }
   border-color: var(--bs-border-color);
 }
 
-.invoice-lines table tr:nth-child(even) td {
+.document-lines table tr:nth-child(even) td {
   background-color: var(--bs-secondary-bg-subtle);
 }
 
-.invoice-lines table .table-secondary {
+.document-lines table .table-secondary {
   background-color: var(--bs-secondary-bg) !important;
   color: var(--bs-secondary-color) !important;
 }
