--- a/app/views/invoices/show.html.haml
+++ b/app/views/invoices/show.html.haml
@@ -1,5 +1,5 @@
 %div
-  .invoice-header.row.mb-2
+  .document-header.row.mb-2
     .col-md-6
       %h1.h2.mb-3
         Invoice
@@ -9,7 +9,7 @@
         - else
           %span.badge.bg-success.ms-2 Booked
 
-      .invoice-details
+      .document-details
         - if @invoice.date
           .row.mb-2
             .col-sm-4
@@ -23,7 +23,7 @@
             = @invoice.customer_name || @invoice.customer.name
 
     .col-md-6
-      .invoice-details.mt-md-5
+      .document-details.mt-md-5
         - if @invoice.project_id.present?
           .row.mb-2
             .col-sm-4
@@ -64,12 +64,12 @@
                 %span.badge.bg-secondary No Email Address
 
   - if @invoice.prelude.present?
-    .invoice-prelude.mb-4
+    .document-prelude.mb-4
       .card
         .card-body
           = simple_format(@invoice.prelude)
 
-  .invoice-lines.mb-2
+  .document-lines.mb-2
     %table.table.table-bordered
       %thead
         %tr
@@ -112,7 +112,7 @@
                     - else
                       = simple_format(line.description)
 
-  .invoice-summary
+  .document-summary
     .row.justify-content-end
       .col-md-4
         %table.table.table-sm
